[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
url_encoded_data = "0.6.1"
reqwest = { version = "0.11.24", features = ["blocking", "hyper-tls"]}
